Shortening keyframe ref w mixin.

--- a/app/styles/mixins.scss
+++ b/app/styles/mixins.scss
@@ -32,3 +32,18 @@
 	animation: $args;	
 }
 
+
+@mixin keyframes($name) {
+  @-webkit-keyframes $name {
+    @content; 
+  }
+  @-moz-keyframes $name {
+    @content;
+  }
+  @-ms-keyframes $name {
+    @content;
+  }
+  @keyframes $name {
+    @content;
+  } 
+}
