Update to responsive.

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -1,9 +1,6 @@
-.details {
-	.date, .time, .people {
-		font-size: 12px;
-	}	
+.details .date {
+	border: none;
 }
-
 .hold h3 {
 	font-size: 20px;
 }
